# graspnet_ros

./: .gitignore  CMakeLists.txt  README.md  gazebo_rectangular_box_res_01_PARTIAL2.pcd  package.xml  setup.cfg  setup.py
launch/: run_grasp_node.launch.py
scripts/: graspnet_node.py  graspnet_pipeline.py  main.py  parameters.py
